// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`icons/general/IconSecurityClassification should correctly render icon with all props specified 1`] = `
<AccessibleSVG
  className="bdl-IconSecurityClassificationSolid test"
  height={100}
  title="title"
  viewBox="0 0 16 16"
  width={200}
>
  <g
    fill="none"
    fillRule="evenodd"
    stroke="#222"
    strokeWidth={1}
  >
    <path
      d="M14.122 7.425a8.724 8.724 0 0 1-1.692 5.12c-1.065 1.452-2.56 2.534-4.265 2.96-2.036-.426-3.53-1.508-4.595-2.96a8.724 8.724 0 0 1-1.692-5.12V3.277L8 .495l6.122 2.782v4.148z"
      fill="#d3d3d3"
    />
    <path
      d="M11.4 5.323v5.441-5.441z"
      strokeLinecap="round"
      strokeLinejoin="round"
    />
  </g>
</AccessibleSVG>
`;

exports[`icons/general/IconSecurityClassification should correctly render icon with default values 1`] = `
<AccessibleSVG
  className="bdl-IconSecurityClassificationSolid"
  height={16}
  viewBox="0 0 16 16"
  width={16}
>
  <g
    fill="none"
    fillRule="evenodd"
    stroke="#222"
    strokeWidth={1.5}
  >
    <path
      d="M14.122 7.425a8.724 8.724 0 0 1-1.692 5.12c-1.065 1.452-2.56 2.534-4.265 2.96-2.036-.426-3.53-1.508-4.595-2.96a8.724 8.724 0 0 1-1.692-5.12V3.277L8 .495l6.122 2.782v4.148z"
      fill="#d3d3d3"
    />
    <path
      d="M11.4 5.323v5.441-5.441z"
      strokeLinecap="round"
      strokeLinejoin="round"
    />
  </g>
</AccessibleSVG>
`;
